@@ -27,7 +27,8 @@
                    adapter="org.apache.cayenne.dba.hsqldb.HSQLDBAdapter"
                    driver="org.hsqldb.jdbcDriver"
                    url="jdbc:hsqldb:hsql://localhost/bookmarker"
-                   username="sa">
+                   username="sa"
+                   namingStrategy="org.apache.cayenne.dbsync.naming.DefaultObjectNameGenerator">
 
                 <schema>schema-name-01</schema>
 
